bk_ida/gccida/g1/gen_split_1087
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_1087/src/insn-emit.c:12400:30: error: use of undeclared identifier 'machine_mode'
operands[1] = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), operands[1]); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_1087/src/insn-emit.c:12401:61: error: use of undeclared identifier 'machine_mode'
v1 = trunc_int_for_mode( 1 << operands[2]->fld[0].rtwint, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4)); 
                                                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_1087/src/insn-emit.c:12404:30: error: use of undeclared identifier 'machine_mode'
v3 = gen_rtx_fmt_ee( MULT, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), operands[1], v2); 
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_1087/src/obj/insn-emit.o] Error 1
